<resources>
    <string name="app_name">WaveOfFood</string>
    <string name="activity">Activity</string>
    <string name="default_web_client_id">212594530981-vtpumhtmjbepftvlbto9kh58sv5v8tjb.apps.googleusercontent.com</string>
    <string name="next">Next</string>
    <string name="enjoy_restaurant_quality_meals_nat_home">Enjoy Restaurant Quality Meals \nat Home</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="wave_of_food">Food Delivery App</string>
    <string name="login_to_your_account">Login To Your Account</string>
    <string name="or">Or</string>
    <string name="create_account">Create Account</string>
    <string name="don_t_have_account">Don\'t Have Account?</string>
    <string name="design_by_nshamshir">Design By \nShamshir</string>
    <string name="already_have_an_account">Already Have An Account?</string>
    <string name="choose_your_location">Choose Your Location</string>
    <string name="choose_location">Choose Location</string>
    <string name="device_location">To provide you with the best dining experience, we need your permission to access
                                    your device\'s location. By enabling location services, we can offer personalized
                                    restaurant recommendations,accurate delivery estimates, and ensure a seamless food delivery
                                    experience</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="search">Search</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="homes">Home</string>
    <string name="explore_your_favourite_food">Explore Your Favourite Food</string>
    <string name="popular">Popular</string>
    <string name="_1">1</string>
    <string name="carts">Cart</string>
    <string name="searchBarHint">Search for Restaurant</string>
    <string name="buy_again">Buy Again</string>
    <string name="_5">$5</string>
    <string name="foodname">FoodName</string>
    <string name="recent_buy">Recent Buy</string>
    <string name="save_information">Save Information</string>
    <string name="_2345675658">2345675658</string>
    <string name="admin_gmail_com">admin@gmail.com</string>
    <string name="phone">Phone</string>
    <string name="admin">Admin</string>
    <string name="edit">Edit</string>
    <string name="place_my_order">Place My Order</string>
    <string name="name">Name</string>
    <string name="textview">TextView</string>
    <string name="address">Address</string>
    <string name="moreText">Android development uses Kotlin and Java as
the main programming languages.XML is used" </string>
    <string name="_12345678">12345678</string>
    <string name="payment_method">Payment Method</string>
    <string name="num">$5</string>
    <string name="go_home">Go Home</string>
    <string name="congrats_nyour_order_placed">Congratulations!\nYour order has been placed successfully</string>
    <string name="menu">Menu</string>
    <string name="delivery_favourite_food">Delivery Favourite Food</string>
    <string name="email_or_phone_number">Email or Phone Number</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="received">Received</string>
    <string name="dismiss">Dismiss</string>
    <string name="pizza">Pizza</string>
    <string name="cuisines_and_dishes">Cuisines and dishes</string>
    <string name="burger">Burger</string>
    <string name="update_profile">Update Profile</string>
    <string name="free_delivery">Free Delivery</string>
    <string name="add">ADD</string>
    <string name="_0">0</string>
    <string name="restaurants_delivering_to_you">RESTAURANTS DELIVERING TO YOU</string>
    <string name="_20_25">20-25</string>
    <string name="mins">mins</string>
    <string name="_0km">0km</string>
    <string name="pipe">|</string>
    <string name="add_payment_method">Add Payment Method</string>
    <string name="bill_total">Bill total: ₹</string>
    <string name="_104_26">104.26</string>
    <string name="enter_upi_id">Enter UPI ID</string>
    <string name="enter_your_upi_id">Enter your UPI ID</string>
    <string name="pay_now">Pay Now</string>
    <string name="continueToHome">Continue</string>
    <string name="your_orders">Your Orders</string>
    <string name="order_tracking">Order Tracking</string>
    <string name="comment">It seems lake you haven\'t \n placed any orders yet.</string>
    <string name="no_orders_yet">No Orders Yet</string>
    <string name="order">Order</string>
    <string name="waiting_for_confirmation">Waiting for confirmation...</string>
    <string name="delivery_favorite_food">Delivery Favorite Food</string>
    <string name="food_delivery_app">Food Delivery App</string>
    <string name="sign_up_with">Sign Up With</string>
    <string name="recent_buy_items">Recent Buy Items</string>
    <string name="_247_62">247.62</string>
    <string name="add_item">Add Item ₹</string>
    <string name="chicken_spl_turkish_kebad_roll">Chicken Spl Turkish Kebad Roll</string>
    <string name="descriptions">Juicy Turkish-style chicken kebab cooked with mild spices, rolled in a soft wrap with fresh onions and light souces, Smooth, flavourful and filling.</string>
    <string name="crispy_chicken_burger">Crispy Chicken Burger</string>
    <string name="rupee">₹</string>
    <string name="crispy_chicken_burger_pri_peri_fries">Crispy Chicken Burger+Pri Peri Fries</string>
    <string name="craving_something_delicious">Craving Something Delicious?</string>
    <string name="order_trackings">Order Tracking</string>

</resources>