<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingStart="15dp">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/lato"
        android:text="@string/delivery_favourite_food"
        android:textColor="@color/textColor"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/yeon_sung"
        android:text="@string/login_to_your_account"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:fontFamily="@font/lato_bold" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/yeon_sung"
        android:text="@string/wave_of_food"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="325dp"
        android:layout_height="57dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittextshape"
        android:drawableLeft="@drawable/lock_icon"
        android:drawablePadding="15dp"
        android:elevation="5dp"
        android:ems="10"
        android:fontFamily="@font/lato"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        app:layout_constraintEnd_toEndOf="@+id/editTextEmail"
        app:layout_constraintStart_toStartOf="@+id/editTextEmail"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail"/>

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="325dp"
        android:layout_height="57dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/edittextshape"
        android:drawableStart="@drawable/mail_icon"
        android:drawablePadding="15dp"
        android:elevation="5dp"
        android:ems="10"
        android:fontFamily="@font/lato"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="15dp"
        app:layout_constraintEnd_toEndOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/yeon_sung"
        android:text="@string/or"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/editTextPassword"
        app:layout_constraintStart_toStartOf="@+id/editTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/yeon_sung"
        android:text="Continue With"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/textView9"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/googleButton"
        android:layout_width="152dp"
        android:layout_height="57dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/whitebutton"
        android:drawableStart="@drawable/google_icon_2"
        android:fontFamily="@font/lato_bold"
        android:paddingStart="15dp"
        android:text="@string/google"
        android:textAllCaps="false"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button2"
        android:layout_width="152dp"
        android:layout_height="57dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/whitebutton"
        android:drawableStart="@drawable/facebook_3_1"
        android:fontFamily="@font/lato_bold"
        android:paddingLeft="15dp"
        android:text="@string/facebook"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/googleButton"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginButton"
        android:layout_width="152dp"
        android:layout_height="57dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/greenbuttongradient"
        android:fontFamily="@font/yeon_sung"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        tools:fontFamily="@font/lato_bold" />

    <TextView
        android:id="@+id/dontHaveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/lato"
        android:text="@string/don_t_have_account"
        android:textColor="@color/textColor"
        app:layout_constraintEnd_toEndOf="@+id/loginButton"
        app:layout_constraintStart_toStartOf="@+id/loginButton"
        app:layout_constraintTop_toBottomOf="@+id/loginButton"/>

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/yeon_sung"
        android:text="@string/design_by_nshamshir"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dontHaveButton" />
</androidx.constraintlayout.widget.ConstraintLayout>