<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imageViewItemImage"
            android:layout_width="140dp"
            android:layout_height="110dp"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/RoundedImage2"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/textView53"
            android:layout_width="110dp"
            android:layout_height="35dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/add_button_design"
            android:fontFamily="@font/lato_bold"
            android:gravity="center"
            android:text="@string/add"
            android:textColor="@color/crimsonRed"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/imageViewItemImage"
            app:layout_constraintStart_toStartOf="@+id/imageViewItemImage"
            app:layout_constraintTop_toBottomOf="@+id/imageViewItemImage" />

        <TextView
            android:id="@+id/textViewItemName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/lato_bold"
            android:text="@string/crispy_chicken_burger"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/imageViewItemImage"
            app:layout_constraintTop_toTopOf="@+id/imageViewItemImage" />

        <TextView
            android:id="@+id/textView50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/rupee"
            app:layout_constraintStart_toStartOf="@+id/textViewItemName"
            app:layout_constraintTop_toBottomOf="@+id/textViewItemName" />

        <TextView
            android:id="@+id/textViewPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            app:layout_constraintBottom_toBottomOf="@+id/textView50"
            app:layout_constraintStart_toEndOf="@+id/textView50"
            app:layout_constraintTop_toTopOf="@+id/textView50" />

        <TextView
            android:id="@+id/textViewDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/crispy_chicken_burger_pri_peri_fries"
            app:layout_constraintStart_toStartOf="@+id/textView50"
            app:layout_constraintTop_toBottomOf="@+id/textViewPrice" />

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/view_design"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView53" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>