<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:scaleType="centerCrop"
            android:background="@android:color/transparent"
            android:src="@drawable/arrow_circle_left" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/yeon_sung"
        android:text="@string/edit"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backButton" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView27">

        <TextView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/yeon_sung"
            android:paddingStart="8dp"
            android:text="@string/name"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:ems="10"
            android:fontFamily="@font/lato"
            android:inputType="textPersonName"
            android:textColor="@color/black" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_vertical"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView27">

        <TextView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/yeon_sung"
            android:paddingLeft="8dp"
            android:text="@string/address"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:ems="10"
            android:fontFamily="@font/lato"
            android:inputType="textMultiLine"
            android:textColor="@color/black" />
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView27">

            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/yeon_sung"
                android:paddingStart="8dp"
                android:text="@string/phone"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:ems="10"
                android:fontFamily="@font/lato"
                android:inputType="phone"
                android:textColor="@color/black" />
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView27">

        <TextView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/yeon_sung"
            android:paddingLeft="8dp"
            android:text="@string/payment_method"
            android:textColor="@color/black" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/cashondelivery" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView27">

        <TextView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/yeon_sung"
            android:paddingLeft="8dp"
            android:text="Total Amount"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/totalAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:ems="10"
            android:fontFamily="@font/lato"
            android:gravity="end"
            android:inputType="none"
            android:paddingEnd="32dp"
            android:textColor="@color/textColor"
            android:textSize="20sp"
            tools:fontFamily="@font/yeon_sung" />
    </LinearLayout>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/placeOrder"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_gravity="bottom"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/edittextshape"
        android:fontFamily="@font/yeon_sung"
        android:text="@string/place_my_order"
        android:textAllCaps="false"
        android:textColor="@color/textColor" />

</FrameLayout>